# toyc

./: CMakeLists.txt
examples/: main.tac
source/include/: lexer.h  tac.h  token.h
source/source/: lexer.c  tac.c  token.c
